--- a/index.html
+++ b/index.html
@@ -165,15 +165,15 @@
 
       <div class="row mt-5">
         <div class="col-md-4">
-          <div style="position: relative;" class="mt-5 mt-md-0">
+          <div style="position: relative;" class="mt-5 mt-md-2">
            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSFZjUkHj8rSSEX1KETuFpm4lvha5VTfRcsa3yKesPeViP9y5Zigt0KFV26d91Tusl1ci4&usqp=CAU" alt="no-img" class="w-100">
            <div style="position: absolute; bottom: 0px;" class="d-flex justify-content-center align-items-center div2">
              <h3>VICE CABINET</h3>
            </div>
           </div>
  
-          <div style="position: relative;" class="mt-5">
-           <img src="https://t4.ftcdn.net/jpg/03/71/92/67/360_F_371926762_MdmDMtJbXt7DoaDrxFP0dp9Nq1tSFCnR.jpg" alt="no-img" class="w-100">
+          <div style="position: relative;" class="my-5  mt-md-2">
+           <img src="https://t4.ftcdn.net/jpg/03/71/92/67/360_F_371926762_MdmDMtJbXt7DoaDrxFP0dp9Nq1tSFCnR.jpg" alt="no-img" class="w-100 mt-5 mt-md-2">
            <div style="position: absolute; bottom: 0px;" class="d-flex justify-content-center align-items-center div2">
              <h3>SIDE TABLES</h3>
            </div>
